Footer social section (#140)
* Social secion look

* Rename follow-us section to social-section

* Refactor css

* Fix lint build

* Add tests for Social section

* Fix lint build and introduce @xo-union/component-elements

The elements package just provides a wrapper around built in elements
It serves as a way to centralize/standardize handling of certain props.
For example: The Anchor component in
@xo-union/component-elements/lib/anchor adds a `rel="noopener noreferrer"`
attribute to anchors with a `target="_blank"` property

* Refactor

- Fix nav-link class name
- Make implementation of component-elements/anchor more declarative by
reducing the component's purpose just focused on NewWindowAnchors

* Rename component-elements to component-standard-elements

Additionally:
  - Silenced some lint warnings and configure package to make package
  tests pass

* Fix focused state on social icons

* Make all brand urls NewWindowAnchor(s)

* Fix links to relative paths

Additionally, cleaned up code for brand nav items

* Remove unused prop

* Fix lint build

* Remove font scale modules that have no effect

* Use babel-runtime to reduce module sizes (#142)

--- a/packages/@xo-union/component-analytics/package.json
+++ b/packages/@xo-union/component-analytics/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.4",
   "main": null,
   "dependencies": {
-    "react": "^15.4.2",
-    "core-decorators": "^0.17.0",
     "@segment/is-meta": "^1.0.0",
+    "babel-runtime": "^6.23.0",
+    "core-decorators": "^0.17.0",
     "matches-selector": "^1.0.0",
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "react": "^15.4.2"
   },
   "files": [
     "lib/*"
