--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
     "transform-object-rest-spread",
     "transform-class-properties",
     "transform-decorators-legacy",
-    "transform-function-bind"
+    "transform-function-bind",
+    "transform-runtime"
   ]
 }
