--- a/packages/@xo-union/tk-component-fields/package.json
+++ b/packages/@xo-union/tk-component-fields/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.12",
   "main": "lib/index.js",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.4.2",
     "@xo-union/tk-css-bootstrap": "^0.2.4",
