--- a/packages/@xo-union/tk-component-footer-nav/package.json
+++ b/packages/@xo-union/tk-component-footer-nav/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "main": "lib/index.js",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
+    "@xo-union/component-standard-elements": "^0.0.1",
+    "@xo-union/tk-component-icons": "^0.3.6",
     "@xo-union/tk-css-bootstrap": "^0.2.4",
     "@xo-union/tk-css-colors": "^0.3.3",
-    "@xo-union/tk-component-icons": "^0.3.6",
     "@xo-union/tk-css-typography": "^0.1.6",
     "@xo-union/tk-css-utilities": "^0.1.5",
     "css-module-builder": "^1.0.0-beta.7",
