--- a/packages/@xo-union/tk-component-header-nav/package.json
+++ b/packages/@xo-union/tk-component-header-nav/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.7",
   "main": "lib/index.js",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "core-decorators": "^0.17.0",
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.4.2",
