--- a/packages/@xo-union/tk-component-icons/package.json
+++ b/packages/@xo-union/tk-component-icons/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.6",
   "main": "lib/components/index.js",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.5",
     "react": "^15.5.4",
     "xojs": "^0.2.0"
