--- a/packages/xojs/package.json
+++ b/packages/xojs/package.json
@@ -11,6 +11,7 @@
     "lib/*"
   ],
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "lodash.flatten": "^4.4.0"
   },
   "devDependencies": {
