--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "benchmark": "yarn run karma -- start karma.conf.benchmark.js",
-    "bootstrap": "lerna bootstrap && npm link ./packages/xojs",
+    "bootstrap": "lerna bootstrap --hoist && npm link ./packages/xojs",
     "bootstrap.generators": "npm link ./packages/tools/generator-union",
     "build": "yarn run build.patterns && yarn run build.docs && yarn run build.xojs",
     "build.docs": "webpack --config webpack.docs.babel.js",
@@ -125,11 +125,11 @@
     "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.3",
-    "lerna": "2.0.0-beta.38",
+    "lerna": "^2.0.0-rc.5",
     "loader-utils": "^1.1.0",
     "microtime": "^2.1.3",
     "node-promisify": "^1.2.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "pascal-case": "^2.0.0",
     "pm2": "^2.4.5",
     "postcss-loader": "^1.3.3",
