--- a/packages/@xo-union/tk-component-buttons/package.json
+++ b/packages/@xo-union/tk-component-buttons/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.9",
   "main": "lib/components/index.js",
   "dependencies": {
+    "@xo-union/tk-css-colors": "^0.3.4",
+    "@xo-union/tk-css-typography": "^0.1.7",
     "babel-runtime": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.5",
-    "react": "^15.4.2",
-    "@xo-union/tk-css-colors": "^0.3.4",
-    "@xo-union/tk-css-typography": "^0.1.7"
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4"
   },
   "files": [
     "lib/*"
