--- a/packages/@xo-union/tk-component-fields/package.json
+++ b/packages/@xo-union/tk-component-fields/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.13",
   "main": "lib/index.js",
   "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "css-module-builder": "^1.0.0-beta.5",
-    "react": "^15.4.2",
+    "@xo-union/tk-component-icons": "^0.3.7",
     "@xo-union/tk-css-bootstrap": "^0.2.5",
     "@xo-union/tk-css-colors": "^0.3.4",
-    "@xo-union/tk-component-icons": "^0.3.7",
+    "@xo-union/tk-css-typography": "^0.1.7",
     "@xo-union/tk-css-utilities": "^0.1.6",
-    "@xo-union/tk-css-typography": "^0.1.7"
+    "babel-runtime": "^6.23.0",
+    "css-module-builder": "^1.0.0-beta.5",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4"
   },
   "files": [
     "lib/*"
