--- a/packages/@xo-union/tk-component-icons/package.json
+++ b/packages/@xo-union/tk-component-icons/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.5",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "xojs": "^0.3.0"
   },
