--- a/packages/@xo-union/tk-css-utilities/package.json
+++ b/packages/@xo-union/tk-css-utilities/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@xo-union/tk-css-utilities",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "main": null,
   "dependencies": {
-    "css-module-builder": "^1.0.0-beta.5",
+    "@xo-union/tk-css-colors": "^0.3.4",
     "@xo-union/tk-css-typography": "^0.1.7",
-    "@xo-union/tk-css-colors": "^0.3.4"
+    "css-module-builder": "^1.0.0-beta.5"
   },
   "files": [
     "lib/*"
