--- a/packages/@xo-union/tk-component-footer-nav/package.json
+++ b/packages/@xo-union/tk-component-footer-nav/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@xo-union/component-standard-elements": "^0.1.0",
     "@xo-union/tk-component-icons": "^0.3.8",
+    "@xo-union/tk-component-analytics":"^0.1.6",
     "@xo-union/tk-css-bootstrap": "^0.2.5",
     "@xo-union/tk-css-colors": "^0.3.4",
     "@xo-union/tk-css-typography": "^0.1.7",
