--- a/packages/@xo-union/tk-css-bootstrap/package.json
+++ b/packages/@xo-union/tk-css-bootstrap/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@xo-union/tk-css-bootstrap",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "main": null,
   "dependencies": {
-    "css-module-builder": "^1.0.0-beta.5",
-    "@xo-union/tk-css-typography": "^0.1.7"
+    "@xo-union/tk-css-typography": "^0.1.8",
+    "css-module-builder": "^1.0.0-beta.5"
   },
   "files": [
     "lib/*"
