Add script to facilitate upgrades (#171)
* Add script to facilitate upgrading dependencies in all projects

* Refactor depenedencies

Upgrade most dependencies and remove some
Additionally, added specs for code that touches marksy. This will
facilitate upgrading marksy in the future

* [skip ci] Add how-to for upgrading

* Remove unused reference

* Downgrade to eslint 3 and fix lint build

* Fix DropdownItem specs

* Fix node tests

--- a/packages/tools/directory-loader/package.json
+++ b/packages/tools/directory-loader/package.json
@@ -3,17 +3,13 @@
   "version": "1.0.2",
   "description": "A webpack loader that loads all files in a folder",
   "main": "index.js",
-  "scripts": {
-    "test": "jasmine"
-  },
   "dependencies": {
     "glob-all": "^3.1.0"
   },
+  "devDependencies": {
+    "require-from-string": "^1.2.1"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "jasmine": "^2.5.3",
-    "require-from-string": "^1.2.1"
-  }
+  "license": "ISC"
 }
