--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean.build": "git clean -dfx packages/@xo-union packages/xojs",
     "clean.public": "git clean -dfx public/",
     "clean.dependencies": "echo y | lerna clean",
+    "each.upgrade": "lerna --concurrency 1 exec -- npm-upgrade && npm-upgrade",
     "eslint": "eslint",
     "karma": "yarn run node -- $(which karma)",
     "lint": "yarn run node -- ./scripts/lint/index.js",
@@ -56,33 +57,33 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-register": "^6.24.1",
-    "css-module-builder": "^1.0.0-beta.5",
+    "css-module-builder": "^1.0.0-beta.7",
     "humanize-string": "https://registry.npmjs.org/humanize-string/-/humanize-string-1.0.1.tgz",
     "jsx-to-string-2": "^1.0.0",
     "karma-benchmark-reporter": "^0.1.1",
     "marksy": "^0.3.0",
-    "mobx": "^3.1.9",
-    "mobx-react": "^4.1.8",
+    "mobx": "^3.1.15",
+    "mobx-react": "^4.2.1",
     "mobx-react-router": "^3.1.2",
-    "pascal-case": "^2.0.0",
+    "pascal-case": "^2.0.1",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-addons-test-utils": "^15.5.1",
-    "react-css-modules": "^4.2.1",
-    "react-dom": "^15.5.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-css-modules": "^4.3.0",
+    "react-dom": "^15.6.1",
     "react-router": "^3.0.5",
     "split-array": "^1.0.1",
-    "xojs": "^0.0.4"
+    "xojs": "^0.3.0"
   },
   "devDependencies": {
     "a-css-loader": "^1.0.0-beta.11",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
@@ -96,62 +97,62 @@
     "css": "^2.2.1",
     "css-byebye": "^1.1.0",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.0.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-node": "^0.3.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jasmine": "^2.3.1",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
     "exports-loader": "https://registry.npmjs.org/exports-loader/-/exports-loader-0.6.3.tgz",
-    "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "extend": "^3.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "glob-all": "^3.1.0",
-    "html-webpack-plugin": "^2.26.0",
+    "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "imports-loader": "^0.7.1",
-    "inquirer": "^3.0.6",
-    "jasmine": "^2.5.3",
-    "jasmine-core": "^2.5.2",
+    "inquirer": "^3.1.1",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.6.4",
     "jasmine-spec-reporter": "^4.1.0",
     "jsx-to-string-2": "^1.0.0",
-    "karma": "^1.6.0",
+    "karma": "^1.7.0",
     "karma-benchmark": "^0.7.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.3",
     "lerna": "^2.0.0-rc.5",
     "loader-utils": "^1.1.0",
-    "microtime": "^2.1.3",
+    "microtime": "^2.1.5",
     "node-promisify": "^1.2.0",
     "node-sass": "^4.5.3",
+    "npm-upgrade": "^1.1.0",
     "pascal-case": "^2.0.0",
-    "pm2": "^2.4.5",
-    "postcss-loader": "^1.3.3",
+    "pm2": "^2.5.0",
+    "postcss-loader": "^2.0.6",
     "postcss-remove-rules": "^1.0.0",
     "prism-themes": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "react-docgen": "^2.14.1",
+    "react-docgen": "^2.16.0",
     "react-docgen-loader": "^2.9.1",
-    "react-markdown-loader": "^1.1.6",
-    "react-test-renderer": "^15.5.4",
-    "sass-loader": "^4.1.1",
+    "react-test-renderer": "^15.6.1",
+    "sass-loader": "^6.0.6",
     "semver": "https://registry.npmjs.org/semver/-/semver-5.3.0.tgz",
     "string-loader": "^0.0.1",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.18.2",
     "svgo-loader": "^1.2.1",
-    "tar-stream": "^1.5.2",
+    "tar-stream": "^1.5.4",
     "treeify": "^1.0.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.4",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
     "xml-loader": "^1.2.1",
     "xml2js": "^0.4.17",
-    "yo": "^1.8.5"
+    "yo": "^2.0.0"
   }
 }
