--- a/packages/@xo-union/tk-component-analytics/package.json
+++ b/packages/@xo-union/tk-component-analytics/package.json
@@ -8,7 +8,8 @@
     "core-decorators": "^0.19.0",
     "matches-selector": "^1.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "xojs": "^0.3.0"
   },
   "files": [
     "lib/*"
