--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "exports-loader": "https://registry.npmjs.org/exports-loader/-/exports-loader-0.6.3.tgz",
     "extend": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
+    "file-loader": "0.10.1",
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
