--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,11 @@
     "es2015"
   ],
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-class-properties",
     "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-object-rest-spread",
     "transform-function-bind",
-    "transform-runtime"
+    "transform-runtime",
+    "transform-do-expressions"
   ]
 }
