--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "jsx-to-string-2": "^1.0.0",
     "karma-benchmark-reporter": "^0.1.1",
     "marksy": "^0.3.0",
-    "mobx": "^3.1.15",
+    "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-react-router": "^3.1.2",
+    "npm": "^5.0.3",
     "pascal-case": "^2.0.1",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
@@ -75,7 +76,7 @@
     "react-dom": "^15.6.1",
     "react-router": "^3.0.5",
     "split-array": "^1.0.1",
-    "xojs": "^0.3.0"
+    "xojs": "^0.5.0"
   },
   "devDependencies": {
     "a-css-loader": "^1.0.0-beta.11",
@@ -83,7 +84,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
@@ -96,13 +97,13 @@
     "classnames": "^2.2.5",
     "css": "^2.2.1",
     "css-byebye": "^1.1.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^2.9.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-import-resolver-node": "^0.3.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jasmine": "^2.3.1",
+    "eslint-import-resolver-node": "^0.3.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jasmine": "^2.6.2",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
@@ -111,17 +112,17 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "0.10.1",
     "glob-all": "^3.1.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.29.0",
     "image-webpack-loader": "^3.3.1",
     "imports-loader": "^0.7.1",
     "inquirer": "^3.1.1",
     "jasmine": "^2.6.0",
     "jasmine-core": "^2.6.4",
-    "jasmine-spec-reporter": "^4.1.0",
+    "jasmine-spec-reporter": "^4.1.1",
     "jsx-to-string-2": "^1.0.0",
     "karma": "^1.7.0",
     "karma-benchmark": "^0.7.1",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
@@ -149,8 +150,8 @@
     "tar-stream": "^1.5.4",
     "treeify": "^1.0.1",
     "url-loader": "^0.5.9",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0",
     "xml-loader": "^1.2.1",
     "xml2js": "^0.4.17",
     "yo": "^2.0.0"
