Add budget.size.check and budget.size.update script

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "build.docs": "webpack --config webpack.docs.babel.js",
     "build.patterns": "webpack --config webpack.patterns.babel.js",
     "build.xojs": "babel packages/xojs/src --out-dir packages/xojs/lib --ignore *spec.js,*benchmark.js",
+    "budget.size.update": "node -r babel-register ./budgets/size/interactiveUpdateBudget/index.js",
+    "budget.size.check": "node -r babel-register ./budgets/size/check.js",
     "clean": "yarn run clean.dependencies && yarn run clean.build",
     "clean.all": "yarn run clean && rm -rf node_modules",
     "clean.build": "git clean -dfx packages/@xo-union packages/xojs",
