--- a/packages/@xo-union/tk-lib-core-state/package.json
+++ b/packages/@xo-union/tk-lib-core-state/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@xo-union/tk-component-membership-modal",
+  "name": "@xo-union/tk-lib-core-state",
   "version": "0.1.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@xo-union/tk-lib-core-state": "^0.1.0",
+    "@xo-union/store-membership": "^0.1.0",
     "babel-runtime": "^6.23.0",
-    "css-module-builder": "^1.0.0-beta.7",
+    "core-decorators": "^0.19.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "xojs": "^0.5.0"
   },
   "files": [
     "lib/*"
