--- a/packages/@xo-union/tk-component-buttons/package.json
+++ b/packages/@xo-union/tk-component-buttons/package.json
@@ -4,6 +4,7 @@
   "main": "lib/components/index.js",
   "dependencies": {
     "@xo-union/tk-css-colors": "^0.3.5",
+    "@xo-union/tk-css-spacing": "^0.1.0",
     "@xo-union/tk-css-typography": "^0.1.11",
     "babel-runtime": "^6.23.0",
     "css-module-builder": "^1.0.0-beta.7",
