--- a/package.json
+++ b/package.json
@@ -93,11 +93,10 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "twbs/bootstrap#v4-dev",
     "chalk": "https://registry.npmjs.org/chalk/-/chalk-1.1.3.tgz",
     "classnames": "^2.2.5",
     "css": "^2.2.1",
-    "css-byebye": "^1.1.0",
     "enzyme": "^2.9.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
