--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "react-docgen": "^2.16.0",
     "react-docgen-loader": "^2.9.1",
     "react-test-renderer": "^15.6.1",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "semver": "https://registry.npmjs.org/semver/-/semver-5.3.0.tgz",
     "sha.js": "^2.4.8",
