--- a/packages/@xo-union/tk-component-footer-nav/package.json
+++ b/packages/@xo-union/tk-component-footer-nav/package.json
@@ -8,6 +8,7 @@
     "@xo-union/tk-component-icons": "^0.4.4",
     "@xo-union/tk-css-bootstrap": "^1.0.0",
     "@xo-union/tk-css-colors": "^1.0.0",
+    "@xo-union/tk-css-grid": "^0.1.0",
     "@xo-union/tk-css-spacing": "^0.2.0",
     "@xo-union/tk-css-typography": "^1.0.0",
     "@xo-union/tk-css-utilities": "^0.3.4",
