--- a/packages/@xo-union/tk-css-grid/package.json
+++ b/packages/@xo-union/tk-css-grid/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "main": "lib/index.cssm",
   "dependencies": {
-    "css-module-builder": "^1.0.0-beta.7",
-    "@xo-union/tk-css-typography": "^1.0.0"
+    "@xo-union/tk-css-typography": "^1.0.0",
+    "css-module-builder": "^1.0.0-beta.7"
   },
   "files": [
     "lib/*"
